#pragma once
enum class GameState{
    MainMenu,
    LevelSelect,
    Settings,
    Playing,
    GameOver,
    Win,
};